# ds_2024_homeworks

./: .gitignore  README.md
lab1/: README.md  test.bat  test.sh
lab1/console/: test.bat  test.sh
lab1/console/src/: main.c
lab1/data/: 1.ans  1.in  2.ans  2.in  3.ans  3.in  4.in  5.ans  5.in  6.ans  6.in  7.ans  7.in  8.ans  8.in
lab1/gui/: CMakeLists.txt  README.md  test.bat  test.sh
lab1/gui/include/: window.h
lab1/gui/include/polynomial/: polynomial.h
lab1/gui/src/: console_main.c  gui_main.cpp  polynomial.c  window.cpp
lab1/project/: CMakeLists.txt  test.sh
lab1/project/include/: style.h
lab1/project/include/polynomial/: polynomial.h
lab1/project/src/: polynomial.c
lab1/project/src/console/: main.c
lab1/project/src/gui/: main.cpp  window.cpp
lab1/report/: report.typ
lab1/single_file/: main.c  test.bat  test.sh
lab1/src/: main.c
lab2/: README.md
lab2/data/: data1.in  data2.in
lab2/report/: report.typ
lab2/src/: data.in  data3.in  main.c
lab3/: README.md  test.bat  test.sh  test_debug.bat  test_debug.sh  test_word.bat  test_word.sh
lab3/src/: compressor.c  compressor.cpp  decompressor.c  decompressor.cpp
lab3/src/utils/: calc_compress_radio.py  find_two_mins.cpp
lab3/testcase/: 1.MIT-license.txt
